--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "octoviz",
   "version": "0.0.1",
   "dependencies": {
-    "express": "3.1.x"
+    "express": "3.1.x",
+    "hbs": "2.3.x",
+    "sift": "0.0.x"
   },
   "engines": {
     "node": "0.10.x",
