--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.1",
   "dependencies": {
     "express": "3.1.x",
-    "hbs": "2.3.x",
-    "sift": "0.0.x"
+    "hbs": "2.3.x"
   },
   "engines": {
     "node": "0.10.x",
